# mcp2pyscf

./: LICENSE  README.md  example_main.py  main.py  plot.py  pyproject.toml  pyscf_tools.py
gen_pyscf/: gen_pyscf.py
geom_handling/: gen_geom.py
sample/: ethylene.xyz  soscf.py
