[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geometric>=1.1",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyscf>=2.9.0",
    "rdkit>=2025.3.3",
]
